Update Project ISE code (2).ipynb

--- a/Project ISE code (2).ipynb
+++ b/Project ISE code (2).ipynb
@@ -52,7 +52,7 @@
     "FPS_list = [270, 93, 70, 60, 70, 125, 45, 83, 60, 150, 40, 85]\n",
     "gpu_rgb = [1, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 1]\n",
     "price_list = [3299, 749.99, 379.99, 549.99, 379.99, 906.14, 333.91, 479.99, 329.99, 999.99, 219, 700]\n",
-    "gpu_color = [\"White\", \"Black\", \"Black\", \"Black\", \"White\", \"White\", \"White\", \"Grey\", \"Rainbow\", \"Black\", \"Pink\", \"Pink\"]\n",
+    "gpu_color = [\"Black\", \"Black\", \"Black\", \"Black\", \"White\", \"White\", \"White\", \"Grey\", \"Rainbow\", \"Black\", \"Pink\", \"Pink\"]\n",
     "gpu_performance = [10, 3.07, 2.17, 2.78, 2.17, 4.33, 1.2, 2.68, 1.78, 5.3, 1, 2.76]\n",
     "\n",
     "# CPU parts\n",
